// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppNotification /> Default story renders snapshot 1`] = `
<div
  class="app-notification app-notification--variant-default"
  role="status"
>
  <div
    class="app-notification__content"
  >
    <section>
      <div
        class="text text--headline-sm app-notification__title"
      >
        This is an AppNotification title
      </div>
      <span
        class="text text--body-md app-notification__sub-title"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="app-notification__actions"
      />
    </section>
  </div>
</div>
`;

exports[`<AppNotification /> InverseVariant story renders snapshot 1`] = `
<div
  class="app-notification app-notification--variant-inverse"
  role="status"
>
  <div
    class="app-notification__content"
  >
    <section>
      <div
        class="text text--headline-sm app-notification__title"
      >
        This is an AppNotification title
      </div>
      <span
        class="text text--body-md app-notification__sub-title"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="app-notification__actions"
      >
         
        <div
          class="button-group button-group--horizontal !flex-row"
        >
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Call To Action
            </span>
          </button>
          <button
            class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`<AppNotification /> InverseWithDismissAndControls story renders snapshot 1`] = `
<div
  class="app-notification app-notification--variant-inverse"
  role="status"
>
  <div
    class="app-notification__content"
  >
    <section>
      <div
        class="text text--headline-sm app-notification__title"
      >
        This is an AppNotification title
      </div>
      <span
        class="text text--body-md app-notification__sub-title"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="app-notification__actions"
      >
         
        <div
          class="button-group button-group--horizontal !flex-row"
        >
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Call To Action
            </span>
          </button>
          <button
            class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
    <button
      aria-label="close"
      class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral app-notification__close-btn"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<AppNotification /> WithControls story renders snapshot 1`] = `
<div
  class="app-notification app-notification--variant-default"
  role="status"
>
  <div
    class="app-notification__content"
  >
    <section>
      <div
        class="text text--headline-sm app-notification__title"
      >
        This is an AppNotification title
      </div>
      <span
        class="text text--body-md app-notification__sub-title"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="app-notification__actions"
      >
         
        <div
          class="button-group button-group--horizontal !flex-row"
        >
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-inverse"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Call To Action
            </span>
          </button>
          <button
            class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-inverse"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`<AppNotification /> WithDismissAndControls story renders snapshot 1`] = `
<div
  class="app-notification app-notification--variant-default"
  role="status"
>
  <div
    class="app-notification__content"
  >
    <section>
      <div
        class="text text--headline-sm app-notification__title"
      >
        This is an AppNotification title
      </div>
      <span
        class="text text--body-md app-notification__sub-title"
      >
        Limited subtitle text
      </span>
      <div
        class="app-notification__actions"
      >
         
        <div
          class="button-group button-group--horizontal !flex-row"
        >
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-inverse"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Call To Action
            </span>
          </button>
          <button
            class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-inverse"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
    <button
      aria-label="close"
      class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-inverse app-notification__close-btn"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<AppNotification /> WithLinkInSubtitle story renders snapshot 1`] = `
<div
  class="app-notification app-notification--variant-default"
  role="status"
>
  <div
    class="app-notification__content"
  >
    <section>
      <div
        class="text text--headline-sm app-notification__title"
      >
        This is an AppNotification title
      </div>
      <span
        class="text text--body-md app-notification__sub-title"
      >
        <span
          class="text text--body-md"
        >
          Some text with a
           
          <a
            class="link link--emphasis-default link--variant-inverse"
            href="https://example.com/"
          >
            link
          </a>
           
          in.
        </span>
      </span>
      <div
        class="app-notification__actions"
      />
    </section>
  </div>
</div>
`;
